# python-command-executor

./: .travis.yml  CHANGELOG.rst  Makefile  Pipfile  README.rst  pyproject.toml  setup.cfg  setup.py  tox.ini
command_executor/: __init__.py  command.py  exceptions.py
docs/: Makefile  api.rst  conf.py  index.rst  usage.rst
tests/: test_command.py
